package voldemort;

option java_package = "voldemort.undoTracker.proto";
option java_outer_classname = "ToManagerProto";
option optimize_for = SPEED;

message MsgToManager{ 
	optional TrackMsg trackMsg = 1;
	optional StartEndMsg startEndMsg = 2;
	optional TrackMsg trackMsgFromClient = 3;
}

//From data-nodes and client nodes
message TrackMsg{
  repeated TrackEntry entry = 1;
  optional string nodeId = 2;
}

message TrackEntry {
  required int64 rid = 1;
  repeated int64 dependency = 2;
}



// From Proxy
message StartEndMsg{
	repeated StartEndEntry msg = 1;
}

message StartEndEntry{
	required int64 start = 1;
	required int64 end = 2;
}

message RUD{
	optional int64 rid = 1;
	optional int32 branch = 2;
	optional bool restrain = 3;
}